<resources>

    <string name="app_name">Covid-19 Tracker</string>

    <!-- user login -->
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="new_user">New user</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="dashboard">Dashboard</string>
    <string name="digital_health">Digital Health</string>


    <!-- user registration  -->
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="telephone_number">Telephone number</string>
    <string name="street">Street name</string>
    <string name="postalcode">Postal code</string>
    <string name="city">City</string>


    <string name="doses_delivered">Doses delivered</string>
    <string name="doses_administered">Doses administered</string>
    <string name="source_fohm">Source: Public Health Agency of Sweden</string>
    <string name="total">Total</string>

    <string name="not_provider">Not a healthcare provider</string>
    <string name="go_back">Go back</string>
    <string name="for_provider">For healthcare providers</string>
    <string name="incorrect_credentials">The username and/or password is incorrect</string>
    <string name="signup_failed">The creation of the account failed</string>
    <string name="signup_success">The creation of the account succeeded</string>
    <string name="network_down">Network connectivity error</string>


    <!-- FAQ frågor -->
    <string name="Fråga1">Do we have a Covid-vaccine?</string>
    <string name="Fråga2">What are the benefits of the vaccine?</string>
    <string name="Fråga3">Will the vaccine protect me 100%?</string>
    <string name="Fråga4">What can I do if I got Covid?</string>
    <string name="Fråga5">When should I test myself for Covid?</string>
    <string name="Fråga6">How does testing work for Covid?</string>
    <string name="Fråga7">What do I do if i do not have Covid?</string>
    <string name="Fråga8">Can I order a test to my home?</string>
    <string name="Fråga9">Where can I call if i need info?</string>

    <!-- user svar  -->
    <string name="Svar1">Yes, we have different sorts of vaccine for Covid, we have Pfizer, Moderna and Janssen</string>
    <string name="Svar2">Benefits of the vaccine is that you can worry less about getting sick and get a Covid-vaccine pass, that will help you travel, FYI, you should still take precaution and keep a good hygiene</string>
    <string name="Svar3">No the test does not give you full immunity, it gives you a better chance of not getting sick any helps to reduce the spreading of the virus.</string>
    <string name="Svar4">If you got Covid, you should stay at home and do not socialize person to person, you should stay incubinated for 2 weeks and after that take a test to make sure you do not have Covid anymore.</string>
    <string name="Svar5">When you have an cough, feel sore in the throat or you have a high body temprature, higher than normal</string>
    <string name="Svar6">You can test through a test stick in the nose, or you can take sample of a mucous membrane</string>
    <string name="Svar7">Even if you do not have covid, you should still take precautions and keep a good hygiene, to reduce the risk of spreading the virus</string>
    <string name="Svar8">Yes, you can book an home-test at 1177.se</string>
    <string name="Svar9">Call 112 if you have serious problems, else call 1177</string>
    <string name="healthcare_guide">Healthcare guide 1177</string>

    <string name="covid_19" translatable="false">Covid-19</string>
    <string name="total_cases">Total cases:</string>
    <string name="total_deaths">Total deaths:</string>
    <string name="vaccination_statistics">Vaccination statistics</string>
    <string name="infection_statistics">Covid Statistics</string>
    <string name="notice_sweden_age_group_exclusive">Notice: data on different age groups is only available for Sweden</string>

    <string name="delete">Delete</string>
    <string name="cancel_appointment_warning">Cancel this appointment?</string>
    <string name="canceled_appointment">Appointment is canceled</string>
    <string name="canceled_appointment_failed">Cancellation of appointment failed</string>
    <string name="select_healthcare_provider">Select healthcare provider</string>
    <string name="select_vaccine_type">Choose vaccine type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="nnotes_on_data_ndata_on_different_age_groups_is_currently_not_available_in_weekly_data" translatable="false">\nNotes on data:\nData on different age groups is currently not available in weekly data.\nLast section shows cumilative uptake of one and two doses up to and including selected week in 2021.</string>
    <string name="channel_name_1" translatable="false">Notis dose 2</string>
    <string name="channel_description_1" translatable="false">Datum för dose 2</string>
    <string name="channel_name_2" translatable="false">Get notice for exepted booktime</string>
    <string name="channel_description_2" translatable="false">Get response that booking time is accepted</string>

    <string name="yyyy_mm_dd" translatable="false">yyyy-mm-dd</string>
    <string name="template">Template data</string>
    <string name="health_symbol">Health symbol</string>
    <string name="corona_information">Information about Covid-19</string>
    <string name="todo" translatable="false">Todo</string>
    <string name="rebook">Rebook</string>
    <string name="second_dose_appointment_created">Second dose appointment created</string>
    <string name="login_admin">Helthcare provider login</string>
    <string name="no_healthcare_provider">No healthcare providers available</string>
    <string name="no_vaccine_available">No vaccines available</string>
    <string name="select_time">Select a time</string>
    <string name="contact_your_doctor">Contact your doctor</string>
    <string name="answer_all_questions">Answer all questions</string>
    <string name="appointment_created">Appointment is created</string>
    <string name="appointment_failed">Appointment creation failed</string>
    <string name="questions_failed">Adding questions failed</string>
    <string name="time_for_second_dose">It\'s time for your second dose</string>
    <string name="invalid_email">Invalid email</string>
    <string name="upload_request">Upload request sent</string>
    <string name="cases">Cases</string>
    <string name="cases_per_week">Cases per week</string>
    <string name="death">Deaths</string>
    <string name="death_per_week">Death per week</string>
    <string name="no_appointments_today">No appointments today</string>
    <string name="no_appointments_found">No appointments found</string>
    <string name="add">Add</string>
    <string name="age">Age</string>
    <string name="forthcoming">Forthcoming</string>
    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="dosage_number">Dosage to take</string>
    <string name="confirm_vaccination">Confirm vaccination</string>
    <string name="personal_information">Personal information</string>
    <string name="internal_id_number">Internal id number</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_users">Number of users: </string>
    <string name="upcoming_appointments">Upcoming appointments</string>
    <string name="make_appointment">Make appointment</string>
    <string name="reschedule_appointment">Reschedule appointment</string>
    <string name="current_appointment">Current appointment</string>
    <string name="fill_out_form">Fill out the form</string>
    <string name="questions">Questions</string>
    <string name="answer">Answer</string>
    <string name="clear_filter">Clear filter</string>
    <string name="search">Search</string>
    <string name="sweden">Sweden</string>
    <string name="doses_administered_percent">Doses administered (%)</string>
    <string name="first_dose_percent">First dose(%)</string>
    <string name="Second_dose_percent">Second dose (%)</string>
    <string name="time">Time</string>
    <string name="information">Information</string>
    <string name="inventory">Inventory</string>
    <string name="dosage_quantity">Number of dosages</string>
    <string name="add_dosages">Add dosages</string>
    <string name="confirm_appointment">Confirm appointment</string>
    <string name="scan_qr_code">Scan qr code</string>
    <string name="error_missing_value">No value received</string>
    <string name="success">Success</string>
    <string name="username">Username</string>
    <string name="birthdate">Birthdate</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="passport_invalid">Passport is invalid</string>

    <string name="update_inage">Update</string>
    <string name="info_inage">Info</string>
    <string name="age_inage">Age</string>
    <string name="byt_inage">Change</string>
    <string name="focus_on_qr_code">Focus on the QR code</string>
    <string name="wrong_creeentials">The username/password is incorrect</string>
    <string name="error_msg">error</string>
    <string name="new_account">New account</string>
    <string name="msg_reg">Welcome to Covid Tracker!\n Your login information is:\n username:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">send</string>
    <string name="forgot_psw">Forgot password</string>
    <string name="msg_forgotpsw">Your password is\n</string>

    <string name="age_warning">You must be over 18 to register</string>

    <string name="cant_be_empty">No boxes can be empty</string>

    <string name="phone_number_error">Phone number needs to be 10 digits</string>
    <string name="email_format_error">Wrong email format</string>
    <string name="email_match_error">Emails didn\'t match</string>

    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>




    <!--  age_change -->
    <string name="notimesindatab" translatable="false">No Times in Database\n</string>
    <string name="sign_out">Sign out</string>
    <string name="item1_menu">Other</string>
    <string name="spr_k">language</string>
    <string name="product_catalog">Product Catalog</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="state_minium_age_start_date">State minium age, start date, end date and time slot</string>
    <string name="upload_times_to_server">Upload times to server</string>
    <string name="cancel_appointment">Cancel</string>
    <string name="date_for_second_dose">Second dose taken</string>
    <string name="namn">Name</string>

</resources>