<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="22sp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="22sp"
        android:inputType="textPassword"
        android:id="@+id/password"/>
    <Button
        android:id="@+id/btnForgotPsw"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:background="@color/white"
        android:text="@string/forgot_psw"
        android:textColor="@color/green" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:id="@+id/btnLogIn"/>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:id ="@+id/newUser"
         />

        <Button
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="@id/newUser"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:text="@string/signup"
            android:textColor="@color/green" />

    </LinearLayout>




</LinearLayout>
