<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/deleteAppoitment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:text="@string/cancel_appointment_warning"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        />

    <Button
        android:id="@+id/DeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/deleteAppoitment"
        android:text="@string/yes"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/GobackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintTop_toBottomOf="@id/deleteAppoitment"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>