<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Administartorlogin">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgotPsw"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            />

    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@drawable/background">

    </View>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/email_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textSize="22sp" />

    <Button
        android:id="@+id/BtnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">



        <Button
            android:id="@+id/BtnGoback"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/go_back"
            android:textColor="@color/white" />

    </LinearLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_bottom" />

</LinearLayout>