<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanAndShedVaccs"
    tools:ignore="ExtraText">

    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/pasv_infotext1"
        tools:layout_editor_absoluteX="-11dp" />
    <!--<Spinner
        android:id="@+id/start_date_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/age_spinner"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/end_date_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/start_date_spinner"
        tools:layout_editor_absoluteX="38dp" />-->


    <TextView
        android:id="@+id/pasv_infotext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/state_minium_age_start_date"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="28dp" />


    <EditText
        android:id="@+id/editText_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:ems="10"
        android:hint="@string/select_start_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_spinner" />

    <EditText
        android:id="@+id/editText_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:ems="10"
        android:hint="@string/select_end_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_start_date" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="match_parent"
        android:layout_height="336dp"
        android:layout_marginTop="70dp"
        android:datePickerMode="calendar"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_start_date" />

    <Button
        android:id="@+id/add_time_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="20dp"
        android:text="@string/upload_times_to_server"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--<Button
        android:id="@+id/change_booking_time_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="16dp"
        android:text="Change characterstics of avaliable time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>