<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DigitalHealth">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:text="@string/dashboard"
            android:textColor="#000000"
            android:textSize="30sp"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/template"
            android:textColor="#FFE0B2"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/medical_icon_1_300x300" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <Button
                android:id="@+id/btn_camera"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/scan_qr_code"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/imageviewqr"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <!---TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <TextView
                        android:text="@string/namn"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/pp_name"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <TextView
                        android:text="@string/birthdate"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/pp_birthdate"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <TextView
                        android:text="@string/manufacturer"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/pp_manufact"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <TextView
                        android:text="@string/date_for_second_dose"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/pp_second_dose"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                </TableRow>

            </TableLayout-->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_userinfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>